Test case and JSSM updated to support querystrings in passed argument. Update on RID parsing to not pick up just a single digit.

--- a/test/index.html
+++ b/test/index.html
@@ -34,7 +34,7 @@
 		<div class="top">&nbsp;</div>
 		<h1>JSSM Test</h1>
 		<ul>
-			<li><a href="testdir1/">Test Link</a></li>
+			<li><a href="testdir1/?asdf=1234">Test Link</a></li>
 			<li><a href="testdir2/">Test Link</a></li>
 			<li><a href="testdir3/">Test Link</a></li>
 		</ul>
